--- a/scss/devCode/_variables.scss
+++ b/scss/devCode/_variables.scss
@@ -3,13 +3,23 @@
 
 // Colores
 $primaryColor: #22c49f;
-$bgFaint: #3f404b;
+$complementColor: #C42247;
+
+$tetradicColor2: #4E22C4;
+$tetradicColor3: #C42247;
+$tetradicColor4: #98C422;
+
+
+
+// colores BackGraund
+$bgFaint: #3c3c40;
 $bgStrong: #1a1c22;
+$bgMedium: #242731;
 
 // fuentes
-$fontColor: #fff;
-$font-texto: 14px;
-$font-titulo: 16px;
+$fontColor: #ededed;
+$font-texto: 16px;
+$font-titulo: 20px;
 $PlexRegular: 'PlexSans';
 
 
