--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,11 @@
-@import 'devCode/devCode';
+@import 'devCode/1';
 
-@import 'base/base';
+@import 'base/1';
 
-@import 'layaout/layaout';
+@import 'layaout/1';
 
-@import 'components/components';
+@import 'components/1';
+
+@import 'properties/1';
 
 @import 'media/media';
