--- a/view/index.html
+++ b/view/index.html
@@ -10,35 +10,140 @@
     <header class="header">
         <img src="" alt="">
         <nav class="mainNav">
+            <img src="" alt="">
             <ul class="mainMenu">
-                <li class="mainMenu__item">Portafolio</li>
-                <li class="mainMenu__item">preWork</li>
-                <li class="mainMenu__item">html</li>
-                <li class="mainMenu__item">css</li>
-                <li class="mainMenu__item">preProcesadores</li>
-                <li class="mainMenu__item">js</li>
-                <li class="mainMenu__item">Base de datos</li>
-                <li class="mainMenu__item">git</li>
-                <li class="mainMenu__item">react</li>
-                <li class="mainMenu__item">Angular</li>
+                <li id="navPortafolio" class="mainMenu__item">Portafolio</li>
+                <li id="nav" class="mainMenu__item">PreWork</li>
+                <li id="nav" class="mainMenu__item">HTML</li>
+                <li id="nav" class="mainMenu__item">CSS</li>
+                <li id="nav" class="mainMenu__item">PreProcesadores</li>
+                <li id="nav" class="mainMenu__item">JS</li>
+                <li id="nav" class="mainMenu__item">Base de datos</li>
+                <li id="nav" class="mainMenu__item">Git</li>
+                <li id="nav" class="mainMenu__item">React</li>
+                <li id="nav" class="mainMenu__item">Angular</li>
             </ul>
         </nav>
     </header>
     <main class="mainContainer">
-        <nav>
-            <ul>
-                <li>introduccion</li>
-                <li>etiquetas</li> 
-                <li>buenas practicas</li>
+        <nav class="leftNav">
+            <ul class="leftMenu">
+                <li class="leftMenu__item">introduccion</li>
+                <li class="leftMenu__item">etiquetas</li> 
+                <li class="leftMenu__item">buenas practicas</li>
             </ul>
         </nav>
         
-        <section>
-            <div>
-                <h2>Intoduccion</h2>
-                <hr>
+        <section class="content">
+            <div class="box" id="divPortafolio">
+                <div>
+                    <h2>Intoduccion Portafolio</h2>
+                    <hr>
+                </div>
 
             </div>
+            <!-- #region preWork-->
+            <div class="box--first" id="div">
+                <div class="card">
+                    <div class="card__page"></div>
+                    <div class="cardContent">
+                        <div class="mainTitle">
+                            <h2 class="mainTitle__h">PreWork</h2>
+                        </div>
+    
+                        <div class="sectionTitle">
+                            <h3 class="sectionTitle__h">Editor de texto</h3>
+                        </div>
+                        <hr>
+
+                        <div class="articleBlock">
+
+                            <div class="subnTitle">
+                                <img src="" alt="">
+                                <h4 class="subnTitle__h">Visual Code</h4>
+                            </div>
+
+                            <p class="paragraph">
+                                Es una de las herramientas mas utilizada por los desarrolladores ya que es gratuita y tiene muchos plugins
+                                que son muy apreciados por los desarrolladores ya que permiten un optimo manejo del codigo y es muy versatil
+                                a la hora de desarrolar en muchso de los lenguajes que existen actualmente.
+                            </p>
+    
+                            <div>
+                                
+                            </div>
+    
+                        </div>
+
+                    </div>
+                    
+                </div>
+
+            </div>
+            <!-- #endregion preWork-->
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+
+            <div class="box" id="div">
+                <div>
+                    <h2>Intoduccion Html</h2>
+                    <hr>
+                </div>
+            </div>
+            
         </section>
     </main>
     <footer>
