--- a/scss/components/_mainMenu.scss
+++ b/scss/components/_mainMenu.scss
@@ -1,12 +1,16 @@
 .mainMenu{
-    display: flex;
+    @extend %flexBox;
     &__item{
-        @include defaultFont($c: $primaryColor, $fz: $font-titulo, $fw: medium);
+        position: relative;
+        @include defaultFont($fz: 16px, $fw: medium);
         margin-right: 10px;
         padding: 10px;
         cursor: pointer;
         &:hover{
             background-color: lighten($bgStrong, 10%);
         }
+        // &::after{
+        //     content: "";
+        // }
     }
 }
