--- a/scss/components/_leftMenu.scss
+++ b/scss/components/_leftMenu.scss
@@ -1,5 +1,5 @@
 .leftMenu{
-    @include defaultFont();
+    @include defaultFont(1);
     @extend %flexBoxColumn;
     margin: 10px auto;
     &__item{
