--- a/scss/components/_mainMenu.scss
+++ b/scss/components/_mainMenu.scss
@@ -2,7 +2,7 @@
     @extend %flexBox;
     &__item{
         position: relative;
-        @include defaultFont($fz: 16px, $fw: medium);
+        @include defaultFont(1, $fz: 16px, $fw: medium);
         margin-right: 10px;
         padding: 10px;
         cursor: pointer;
